# revolut

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: income.rs  mod.rs  plan.rs  simulate.rs
src/cli/revolut/: income.rs  mod.rs  plan.rs  simulate.rs
src/data/: plan.rs
src/data/revolut/: mod.rs
src/infrastructure/: consts.rs  format.rs  logger.rs  mod.rs  table.rs
src/service/: income.rs  mod.rs  plan.rs  simulate.rs
src/service/revolut/: income.rs  mod.rs  plan.rs  simulate.rs
