[package]
name = "revolut"
version = "1.0.0"
edition = "2021"
description = "My Personal Revolut Utilities"
authors = ["Javier Rodriguez Posada"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3"
thiserror = "2"
anyhow = "1.0"

[[bin]]
name = "revolut"
bench = false

[profile.release]
lto = true
opt-level = 3
